Webserver mit PNG

--- a/Webprogrammierung/index.html
+++ b/Webprogrammierung/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Doofe Index Seite</h1><br />
-	<a href="mehr.html">Hier gibts mehr :D</a>
+	<a href="mehr.html">Hier gibts mehr :D</a><br />
+	<a href="bild.html">Bild ;-)</a>
 </body>
 </html>
